# simplework

./: .gitignore  CMakeLists.txt  README.md
src/cpp/: CMakeLists.txt
src/cpp/av/: Av.h  CAvFactory.cpp  CAvFilterFactory.cpp  CAvFrame.cpp  CAvFrame.h  CAvFrameFactory.cpp  CAvIn.cpp  CAvInFactory.cpp  CAvIn_ffmpeg.h  CAvOut.cpp  CAvOutFactory.cpp  CAvOut_SDLSpeaker.h  CAvOut_SDLWindow.h  CAvStreaming.cpp  CAvStreaming.h  CAvStreamingFactory.cpp  CMakeLists.txt  CSwsCtx.h  SimpleWorkModule.cpp
src/cpp/av/ffmpeg/: CAudioFrame.cpp  CAudioFrame.h  CAvDevice.cpp  CAvDevice.h  CAvFilter.cpp  CAvFilter.h  CAvFrame.cpp  CAvFrame.h  CAvFrameConverter.cpp  CAvFrameConverter.h  CAvIn.cpp  CAvIn.h  CAvInStreaming.cpp  CAvInStreaming.h  CAvOut.cpp  CAvOut.h  CAvOutStreaming.cpp  CAvOutStreaming.h  CAvSampleType.cpp  CAvSampleType.h  CAvStreaming.cpp  CAvStreaming.h  CFrameConverter.cpp  CFrameConverter.h  CVideoFrame.cpp  CVideoFrame.h  SAudioDevice.h  SVideoDevice.h  av_ffmpeg.h
src/cpp/av/pipe/: CPipe.cpp  CPipe.h
src/cpp/av/sdl/: CAvOut_SDLSpeaker.h  CAvOut_SDLWindow.h  CAvSampleType.cpp  CAvSampleType.h  av_sdl.h
src/cpp/av/thirdpart/: CMakeLists.txt
src/cpp/av/tooljpeg/: CJpegFileWriter.cpp  CJpegFileWriter.h
src/cpp/av/tooljpeg0/: CJpegFileWriter.cpp
src/cpp/core/: CCore.cpp  CCoreFactory.cpp  CCoreModule.cpp  CCtx.cpp  CCtx.h  CDataFactory.cpp  CLibrary.hpp  CLibrary_Linux.hpp  CLibrary_Windows.hpp  CMakeLists.txt  CModule.cpp  CNamedMap.cpp  CPipeFactory.cpp  CString.cpp  CString.h  Core.h  CoreModule.cpp
src/cpp/core/inc/: CFactory.h  CModule.h  CObject.h  Core.h  CoreApi.h  Error.h  Factory.h  ICoreApi.h  ICoreModule.h  IFactory.h  IModule.h  IObject.h  IObjectContainer.h  Module.h  Object.h  SmartPtr.h  TAutoPtr.h  TObject.h  TSmartPtr.h
src/cpp/core/src/: CLibrary_Linux.hpp  CLibrary_Windows.hpp  CModule.hpp  CObject.cpp  Core.h  CoreApi.cpp  CoreApi.hpp  CoreModule.cpp  SimpleWorkModule.cpp
src/cpp/device/: CDeviceFactory.cpp  CDeviceMemory.cpp  CMakeLists.txt  CMemory.cpp  CMovableMemory.cpp  device.h
src/cpp/device/cpu/: CCpuDevice.cpp  CCpuMemory.cpp  CpuDevice.h
src/cpp/device/cuda/: CCudaDevice.cpp  CCudaMemory.cpp  CMakeLists.txt
src/cpp/device/opencl/: CMakeLists.txt  COpenCLDevice.cpp  OpenclDevice.h
src/cpp/device/operators/: CMemoryCopy.cpp  CMemoryZero.cpp  MemoryCopy.cl  MemoryZero.cl  operator.h
src/cpp/inc/: SimpleWork.h
src/cpp/inc/av/: AudioFrame.h  AvFrame.h  AvIn.h  AvOut.h  AvStreaming.h  CAvSampleMeta.h  EAvSampleType.h  EAvStreamingType.h  IPipeIn.h  IPipeOut.h  PAvFrame.h  PAvSample.h  PAvStreaming.h  SAudioDevice.h  SAudioFrame.h  SAvFactory.h  SAvFilter.h  SAvFrame.h  SAvFrameConverter.h  SAvIn.h  SAvNetwork.h  SAvOut.h  SAvSample.h  SAvStreaming.h  SVideoDevice.h  SVideoFrame.h  VideoFrame.h  av.h
src/cpp/inc/core/: BasicType.h  CArg.h  CCallback.h  CData.h  CFactory.h  CModule.h  CObject.h  CPointer.h  CRefer.h  CTaker.h  CVisitor.h  Data.h  Error.h  Factory.h  IObject.h  IVisitor.h  Module.h  NamedMap.h  Object.h  PArg.h  PData.h  PMemory.h  PRuntimeKey.h  SCore.h  SCoreFactory.h  SCtx.h  SData.h  SError.h  SFactory.h  SModule.h  SObject.h  SOperator.h  SPipe.h  SPointer.h  SString.h  __CModule.h  __CPointer.h  core.h
src/cpp/inc/device/: PDeviceMemory.h  PKernelVariable.h  SDevice.h  SDeviceEvent.h  SDeviceFactory.h  SDeviceMemory.h  SKernalOperator.h  SKernelMemory.h  SKernelOperator.h  SMemory.h  SMovableMemory.h  device.h
src/cpp/inc/io/: SArchivable.h  SArchive.h  SIoArchivable.h  SIoArchive.h  SIoFactory.h  io.h
src/cpp/inc/math/: POneHot.h  PTensor.h  PVector.h  SDimension.h  SDimensionSolver.h  SMathFactory.h  SMathKernal.h  SMathKernel.h  SMathSolver.h  STensor.h  STensorEquation.h  STensorHooker.h  STensorOperator.h  STensorSolver.h  SVectorSolver.h  Tensor.h  Vector.h  math.h
src/cpp/inc/nn/: PNnBatchNormalize.h  PNnConv.h  PNnDense.h  PNnLinear.h  PNnNetwork.h  PNnPool.h  PNnRnn.h  PNnState.h  PNnWeight.h  SNeuralNetwork.h  SNnDevia.h  SNnEctx.h  SNnFactory.h  SNnLayer.h  SNnModule.h  SNnNetwork.h  SNnPipe.h  SNnSolver.h  SNnState.h  SNnUnit.h  SNnVariable.h  SNnVariableSolver.h  nn.h
src/cpp/inc/parallel/: PMemory.h  PParallelMemory.h  SDevice.h  SEvent.h  SMemory.h  SParallel.h  SParallelDevice.h  SParallelEvent.h  SParallelMemory.h  SParallelOperator.h  parallel.h
src/cpp/inc/vi/: vi.h
src/cpp/io/: CIoBinaryArReader.cpp  CIoBinaryArReader.h  CIoBinaryArWriter.cpp  CIoBinaryArWriter.h  CIoFactory.cpp  CMakeLists.txt  io.h
src/cpp/io/inc/: IPipeConnector.h  IPipeIn.h  IPipeOut.h  io.h
src/cpp/math/: CDimension.cpp  CDimension.h  CDimensionSolver.cpp  CMakeLists.txt  CMathFactory.cpp  CMathSolver.cpp  CMathSolver.h  CRuntimeKey.hpp  CTensor.cpp  CTensor.h  CTensorFactory.cpp  CTensorFactory.h  CTensorSolver.cpp  CVector.cpp  CVectorSolver.cpp  CVectorSolver.h  math.h
src/cpp/math/cpu/: CCpuFactory.cpp  CCpuFactory.h  CCpuFloatMinus.cpp  CCpuTensorMinus.cpp  operator.h
src/cpp/math/equations/: CMinusEquation.cpp  CPlusEquation.cpp  CRootMeanSquareEquation.cpp  CVarianceEquation.cpp  equation.h
src/cpp/math/inc/: ITensor.h  Tensor.h  (+1 more)
src/cpp/nn/: CActivator.cpp  CActivator.h  CConvUnit.cpp  CConvUnit.h  CConvolutionNetwork copy.cpp  CConvolutionNetwork.cpp  CConvolutionNetwork.h  CDenseNetwork.cpp  CDenseNetwork.h  CDenseUnit.cpp  CDenseUnit.h  CGlobalPoolNetwork.cpp  CGlobalPoolNetwork.h  CGruNetwork.cpp  CGruNetwork.h  CGruUnit.cpp  CGruUnit.h  CIdxFileReader.cpp  CIdxFileReader.h  CMakeLists.txt  CNeuralNetworkFactory.cpp  CNnEvalOutTensor.cpp  CNnExtraTensor.cpp  CNnExtraTensor.h  CNnFactory.cpp  CNnInput.cpp  CNnInput.h  CNnInputVariable.cpp  CNnInputVariable.h  CNnLayer.cpp  CNnLayer.h  CNnLayerNetwork.cpp  CNnLayerNetwork.h  CNnNetwork.cpp  CNnNetwork.h  CNnOperator.cpp  CNnOperator.h  CNnOperatorVariable.cpp  CNnOperatorVariable.h  CNnResizeTensor.cpp  (+59 more)
src/cpp/tensor/: CMakeLists.txt
src/cpp/test/: CAvNetwork.cpp  CAvNetwork.h  CMakeLists.txt  CNeuralNetwork.cpp  CNeuralNetwork.h  CNnNetwork-ImageNet.cpp  CNnNetwork.cpp  CNnNetwork.h  SimpleWork.cpp  SimpleWorkModule.cpp
(+242 files in other folders)
