cmake_minimum_required(VERSION 3.0.0)

set ( SIMPLEWORK_CORE_MODULE_NAME sw.core )
file ( GLOB SRC_FILES "${CMAKE_CURRENT_SOURCE_DIR}/core/*.cpp" )
set( SRC_LIST )
list ( APPEND SRC_LIST ${SRC_FILES} )
add_library(${SIMPLEWORK_CORE_MODULE_NAME} SHARED ${SRC_LIST})
IF (UNIX)
    target_link_libraries(${SIMPLEWORK_CORE_MODULE_NAME} dl)
ENDIF ()
#set_target_properties(${SIMPLEWORK_CORE_MODULE_NAME} PROPERTIES PREFIX "")

set ( SIMPLEWORK_MATH_MODULE_NAME sw.math )
file ( GLOB SRC_FILES "${CMAKE_CURRENT_SOURCE_DIR}/math/*.cpp" )
set( SRC_LIST )
list ( APPEND SRC_LIST ${SRC_FILES} )
add_library(${SIMPLEWORK_MATH_MODULE_NAME} SHARED ${SRC_LIST})
target_link_libraries(${SIMPLEWORK_MATH_MODULE_NAME} ${SIMPLEWORK_CORE_MODULE_NAME})
#set_target_properties(${SIMPLEWORK_MATH_MODULE_NAME} PROPERTIES PREFIX "")

message(STATUS "CMAKE_GENERATOR_PLATFORM: ${CMAKE_GENERATOR_PLATFORM}")
message(STATUS "VCPKG_TARGET_TRIPLET: ${VCPKG_TARGET_TRIPLET}")
message(STATUS "CMAKE_TOOLCHAIN_FILE: ${CMAKE_TOOLCHAIN_FILE}")
message(STATUS "CMAKE_GENERATOR_PLATFORM: ${CMAKE_GENERATOR_PLATFORM}")

find_package(ffmpeg REQUIRED)
find_package(SDL2 REQUIRED)
find_package(fmt CONFIG REQUIRED)
set ( SIMPLEWORK_AV_MODULE_NAME sw.av )
file ( GLOB SRC_FILES "${CMAKE_CURRENT_SOURCE_DIR}/av/*.cpp" )
file ( GLOB FFMPEG_SRC_FILES "${CMAKE_CURRENT_SOURCE_DIR}/av/ffmpeg/*.cpp" )
file ( GLOB SDL_SRC_FILES "${CMAKE_CURRENT_SOURCE_DIR}/av/sdl/*.cpp" )
set( SRC_LIST )
list ( APPEND SRC_LIST ${SRC_FILES} )
list ( APPEND SRC_LIST ${FFMPEG_SRC_FILES} )
list ( APPEND SRC_LIST ${SDL_SRC_FILES} )
add_library(${SIMPLEWORK_AV_MODULE_NAME} SHARED ${SRC_LIST})
target_link_libraries(${SIMPLEWORK_AV_MODULE_NAME} ${SDL2_LIBDIR}/SDL2.lib ${FFMPEG_LIBRARIES} fmt::fmt)
#set_target_properties(${SIMPLEWORK_AV_MODULE_NAME} PROPERTIES PREFIX "")

set ( SIMPLEWORK_TEST_MODULE_NAME sw.test )
file ( GLOB SRC_FILES "${CMAKE_CURRENT_SOURCE_DIR}/test/*.cpp" )
set( SRC_LIST )
list ( APPEND SRC_LIST ${SRC_FILES} )
add_executable(${SIMPLEWORK_TEST_MODULE_NAME} ${SRC_LIST})
target_link_libraries(${SIMPLEWORK_TEST_MODULE_NAME} ${SIMPLEWORK_CORE_MODULE_NAME})
#set_target_properties(${SIMPLEWORK_TEST_MODULE_NAME} PROPERTIES PREFIX "")