cmake_minimum_required(VERSION 3.0.0)

set ( SIMPLEWORK_IO_MODULE_NAME sw.io )
file ( GLOB SRC_FILES "${CMAKE_CURRENT_SOURCE_DIR}/*.cpp" )
set( SRC_LIST )
list ( APPEND SRC_LIST ${SRC_FILES} )
add_library(${SIMPLEWORK_IO_MODULE_NAME} SHARED ${SRC_LIST})
target_link_libraries(${SIMPLEWORK_IO_MODULE_NAME} "sw.core")
set_target_properties(${SIMPLEWORK_IO_MODULE_NAME} PROPERTIES PREFIX "")
message(STATUS "CMAKE_GENERATOR_PLATFORM: ${CMAKE_GENERATOR_PLATFORM}")
message(STATUS "VCPKG_TARGET_TRIPLET: ${VCPKG_TARGET_TRIPLET}")
message(STATUS "vcpkgRoot: ${vcpkgRoot}")
message(STATUS "CMAKE_TOOLCHAIN_FILE: ${CMAKE_TOOLCHAIN_FILE}")
message(STATUS "CMAKE_GENERATOR_PLATFORM: ${CMAKE_GENERATOR_PLATFORM}")
message(STATUS "CMAKE_MODULE_PATH: ${CMAKE_MODULE_PATH}")
message(STATUS "CMAKE_INSTALL_LIBDIR: ${CMAKE_INSTALL_LIBDIR}")
message(STATUS "CMAKE_INSTALL_BINDIR: ${CMAKE_INSTALL_BINDIR}")
